--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +38,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -60,7 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets: 
       - lib/assets/Login-Teste-Senha-1234-18-11-2022.gif
-  
+      - lib/assets/senha.gif
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   
