--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  camera: ^0.9.4+18
+  path_provider: ^2.0.9
+  path: ^1.8.0
+  gallery_saver: any
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +66,8 @@ flutter:
   assets: 
       - lib/assets/Login-Teste-Senha-1234-18-11-2022.gif
       - lib/assets/senha.gif
+      - lib/assets/R.gif
+      - lib/assets/Finalizado.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   
